After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 670390 - -GtkMenuBar-shadow-type: none disables background instead of frame
-GtkMenuBar-shadow-type: none disables background instead of frame
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkMenu
3.2.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2012-02-19 11:57 UTC by Peter de Ridder
Modified: 2012-09-19 01:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Move the gtk_shadow_type check down to gtk_render_frame (1.45 KB, patch)
2012-02-19 11:57 UTC, Peter de Ridder
accepted-commit_now Details | Review

Description Peter de Ridder 2012-02-19 11:57:32 UTC
Created attachment 207974 [details] [review]
Move the gtk_shadow_type check down to gtk_render_frame

In gtk/gtkmenubar.c: gtk_menu_bar_draw the check for get_shadow_type () != GTK_SHADOW_NONE
disables rendering of gtk_render_background and not gtk_render_frame. The check should be moved down to gtk_render_frame.
Comment 1 Cosimo Cecchi 2012-09-04 04:03:27 UTC
Review of attachment 207974 [details] [review]:

Looks good to me